# paternologia

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  SPEC.md  SPEC_DEVICE_BACKUP.md  SPEC_PACER_BRIDGE.md  SPEC_PACER_EXPORT.md  SPEC_PACER_EXPORT_PRESET_AMIDI.md  SPEC_PACER_EXPORT_REVIEW.md  SPEC_PACER_EXPORT_v2.md  pyproject.toml
.claude/: settings.json
claudedocs/: htmx-refactor-plan.md
data/: devices.yaml  pacer.yaml  songs_order.yaml
data/songs/: a1-w-ciszy.yaml  a1_w-ciszy.yaml  basbas.yaml  impro.yaml  jazzy.yaml  nie-jak.yaml  nogami.yaml  slimak.yaml  w-ciszy.yaml  wnetrz.yaml  zen.yaml  zima.yaml  zwrot-i-refren.yaml
docs/brainstorms/: 2026-03-26-midi-cli-brainstorm.md
scripts/: backup_all.sh  restore_device.sh
src/paternologia/: __init__.py  dependencies.py  main.py  models.py  storage.py
src/paternologia/midi/: __init__.py  events.py  index.py  listener.py  ports.py
src/paternologia/pacer/: __init__.py  constants.py  export.py  mappings.py  sysex.py
static/: style.css
templates/: base.html  devices.html  index.html  live.html  song.html  song_edit.html
templates/partials/: action_fields.html  action_row.html  action_types.html  live_song.html  pacer_button.html  song_card.html
tests/: __init__.py  test_api.py  test_e2e.py  test_live_api.py  test_midi_events.py  test_midi_index.py  test_midi_listener.py  test_midi_ports.py  test_models.py  test_pacer_api.py  test_pacer_export.py  test_pacer_mappings.py  test_pacer_sysex.py  test_storage.py
workspace/: COLORS_BUG.md
workspace/pacer_programming/: README.md
(+8 files in other folders)
